# DoubleBoatSimWebGL

./: .gitattributes  .gitignore  16HOUR_SPRINT_PLAN_ADJUSTED.md  16HOUR_SPRINT_PROGRESS.md  2HOUR_REMINDER.md  AI_NATIVE_16HOUR_OPTIMIZATION_PLAN.md  AI_NATIVE_16HOUR_REFACTOR_PLAN.md  AI_NATIVE_OPTIMIZATION_COMPLETION_REPORT.md  ANTI_IDLE_PROTOCOL.md  ARCHITECTURE.md  AUTOMATION_TEST_STATUS.md  BEFORE_AFTER_COMPARISON.md  BILINGUAL_UPDATE.md  BOW_STERN_BALANCE_FIX.md  BUOYANCY_CALCULATION.md  BUOYANCY_DEBUG.md  BUOYANCY_DISTRIBUTION_FIX.md  BUOYANCY_FIX_7000KG.md  CABIN_ARROW_GUIDE.md  CABIN_HIGHLIGHT_FEATURE.md  CODEARCH.md  COLLISION_DEBUG_GUIDE.md  ChannelDashboard.html  DEVELOPMENT_GUIDE.md  DEVELOPMENT_PROGRESS.md  DIRSTRUCT.md  FEATURES_GUIDE.md  FEATURES_SUMMARY.md  GLB_FILES_NOTICE.md  GUI_ENHANCEMENTS_COMPLETE.md  GUI_UPDATE_DISPLAY_FIX.md  GUI_USAGE.md  I18N_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MARINE_ENGINEER_ACTIVITY_ANALYSIS_17:13.md  MARINE_ENGINEER_AGENT_PROMPT.md  MARINE_ENGINEER_REPORT_17:10.md  MASS_UPDATE.md  MODULES_IMPLEMENTATION_SUMMARY.md  NEW_MODULES_GUIDE.md  (+79 more)
config/: settings.json  worldmonitor_config.json
docs/: AI_NATIVE_CPS_18H_EXECUTION_PLAN.md  AI_NATIVE_CPS_4H_REWRITE_PLAN.md  ERROR_MONITORING_SETUP.md  OPENBRIDGE_QUICK_GUIDE.md  SJTU_REQUIREMENTS_ANALYSIS.md  architecture.md  gap_analysis.md  requirements_analysis.md  sjtu_requirements_raw.txt
marine_engineer_agent/: AGENTS.md  AI_NATIVE_INTEGRATION_PLAN.md  IDENTITY.md  INTEGRATION_TASK.md  PHASE3_SUMMARY.md  SOUL.md  USER.md  agent_config.yaml  code_optimization_report_round1.md  (+11 more)
(+329 files in other folders)
