[project]
name = "double-boat-claw-system"
version = "1.0.0"
description = "Digital Twin System for Deep-Sea Scientific Facilities"
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.dependencies]
fastapi = ">=0.109.0"
uvicorn = ">=0.27.0"
websockets = ">=12.0"
pydantic = ">=2.5.0"
aiofiles = ">=23.2.0"

[project.optional-dependencies]
dev = [
    "pytest >= 7.4.0",
    "pytest-asyncio >= 0.23.0",
    "pytest-cov >= 4.1.0",
    "black >= 23.12.0",
    "ruff >= 0.1.0",
    "mypy >= 1.8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
